Estilizando os botões

--- a/style/utility.css
+++ b/style/utility.css
@@ -36,6 +36,18 @@
 
 }
 
+.flex{
+    display: flex;
+}
+
+.gap-1{
+    gap: 1rem;
+}
+
+.grid{
+    display: grid;
+}
+
 @media(width >=80em) {
     
     .container {
