--- a/style/global.css
+++ b/style/global.css
@@ -93,6 +93,15 @@ a {
     /* Herda a cor do elemento pai */
 }
 
+a:hover {
+    background: linear-gradient(90deg,
+            var(--brand-color-secondary) 0%,
+            var(--brand-color-primary)100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
 ul[role="list"] {
     list-style: none;
 }
