--- a/style/buttons.css
+++ b/style/buttons.css
@@ -32,6 +32,10 @@
 
     --btn-color: var(--surface-color);
 
+    -webkit-background-clip: initial;
+    background-clip: initial;
+    color: var(--btn-color);
+
 
 
 }
@@ -72,7 +76,20 @@
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
-        position: relative; 
+        position: relative;
     }
 
+}
+
+@media(width >=80em) {
+
+    .btn-sm {
+        padding: .75rem 1.5rem;
+        font-size: var(--fs-base);
+    }
+
+    .btn-md {
+        padding: 1rem 2rem;
+        font-size: 1.125rem;
+    }
 }
