--- a/style/utility.css
+++ b/style/utility.css
@@ -22,7 +22,7 @@
     --max-width: 375px;
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
     margin-inline: auto;
-    border: solid violet;
+    /* border: solid violet; */
 }
 
 .desktop.desktop-only{
@@ -38,6 +38,14 @@
 
 .flex{
     display: flex;
+}
+
+.items-center{
+    align-items: center;
+}
+
+.gap-1\.5{
+    gap: 1.5rem;
 }
 
 .gap-1{
