--- a/style/global.css
+++ b/style/global.css
@@ -62,6 +62,7 @@ html {
 
 body {
     background-color: var(--bg-color);
+   
 }
 
 h1,
@@ -96,7 +97,9 @@ a {
 a:hover {
     background: linear-gradient(90deg,
             var(--brand-color-secondary) 0%,
-            var(--brand-color-primary)100%);
+            var(--brand-color-primary)100%
+        );
+
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
@@ -106,7 +109,7 @@ ul[role="list"] {
     list-style: none;
 }
 
-@media(width >=80em) {
+@media(width >= 80em) {
     :root {
         --fs-lg: 2rem;
         --fs-lx: 3rem;
