--- a/style/utility.css
+++ b/style/utility.css
@@ -23,9 +23,10 @@
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
     margin-inline: auto;
     /* border: solid violet; */
+    
+    
 }
-
-.desktop.desktop-only{
+.desktop-only{
     display: none;
 }
 
@@ -56,9 +57,9 @@
     display: grid;
 }
 
-@media(width >=80em) {
+@media(width >= 80em) {
     
-    .container {
+    .container  {
         --max-width: 80rem;
     }
 
